--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bulma": "^0.7.2",
+    "bulma-checkradio": "^2.1.0",
+    "bulma-extensions": "^4.0.0",
+    "bulma-timeline": "^3.0.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts-ts": "3.1.0"
+    "react-scripts-ts": "3.1.0",
+    "sass": "^1.15.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
